k8s/identity-integration/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-integration
  namespace: identity
spec:
  selector:
    app: identity-integration
  ports:
  - port: 9091
    targetPort: 9091
